# marios-coin-quest

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_control_architecture_pkg/share/robot_control_architecture_pkg/: package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/robot_control_architecture_pkg/: package.xml  setup.py
ros2_ws/src/robot_control_architecture_pkg/launch/: game_architecture.launch.py
ros2_ws/src/robot_control_architecture_pkg/robot_control_architecture_pkg/: deliberative_architecture_node.py  reactive_architecture_node.py  robot_control_architecture_node.py
