<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control_architecture_pkg</name>
  <version>0.0.0</version>
  <description>This package implements a hybrid robot control architecture to enable a robot to navigate effectively by combining reactive obstacle avoidance with strategic goal-oriented planning.</description>
  <maintainer email="aoa36@cornell.edu">Aimalohi Alakhume</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_descriptions</depend>
  <depend>image_transport</depend>
  <depend>ros_environment</depend>
  <depend>stereo_msgs</depend>
  <depend>rviz_imu_plugin</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
